Add building of Fuel deb packages during ISO build.
1) Add routines for building deb packages and adding them to local mirror.
2) Add commands for creating Ubuntu-based build sandbox.
3) Update deb specs for Fuel components.

Change-Id: If098654d1158aca6676f9cbb3fc3100fc2e8674d

--- a/packages/deb/specs/fencing-agent/debian/changelog
+++ b/packages/deb/specs/fencing-agent/debian/changelog
@@ -1,3 +1,9 @@
+fencing-agent (0.1.0-ubuntu1) precise; urgency=low
+
+  * Update code from upstream
+
+ -- OSCI Jenkins <dburmistrov@mirantis.com>  Wed, 03 Sep 2014 15:17:07 +0400
+
 fencing-agent (0.1.0-1ubuntu0) precise; urgency=low
 
   * Add fencing agent script as a separated task 
