--- a/packages/deb/specs/nailgun-net-check/debian/changelog
+++ b/packages/deb/specs/nailgun-net-check/debian/changelog
@@ -1,3 +1,9 @@
+nailgun-net-check (0.2-ubuntu1) precise; urgency=low
+
+  * Update code from upstream
+
+ -- OSCI Jenkins <dburmistrov@mirantis.com>  Wed, 03 Sep 2014 15:18:56 +0400
+
 nailgun-net-check (0.2-0) unstable; urgency=low
 
   * Initial release.
